@@ -2,7 +2,6 @@
 <?php Horde_Util::pformInput() ?>
 <input type="hidden" name="actionID" value="rule_update" />
 <input type="hidden" name="conditionnumber" value="-1" />
-<input type="hidden" name="new_folder_name" value="" />
 <?php if (isset($vars->edit)): ?>
 <input type="hidden" name="edit" value="<?php echo $vars->edit ?>" />
 <?php endif; if (isset($rule['id'])): ?>
