@@ -2,7 +2,8 @@
 v2.0.1-git
 ----------
 
-[mms] Fix IMAP filtering using envelope data (Bug #9859).
+[mms] Fix folder selection (Bug #9907).
+[mms] Fix filtering using the IMAP driver (Bug #9859).
 
 
 ----
